adding path image

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,13 +25,13 @@
     
         <div class="images">
             <div class="image-item">
-                <img src="ban2.jpg" alt="Tire 1">
+                <img src="static/ban2.jpg" alt="Tire 1">
             </div>
             <div class="image-item">
-                <img src="ban3.jpg" alt="Tire 2">
+                <img src="static/ban3.jpg" alt="Tire 2">
             </div>
             <div class="image-item">
-                <img src="ban4.jpg" alt="Tire 3">
+                <img src="static/ban4.jpg" alt="Tire 3">
             </div>
         </div>
         
