adding history page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
         </div>
         
         <div class="footer">
-            <button>History</button>
+            <button><a href="/history">History</a></button>
             <button><a href="/">Home</a></button>
             <button>Feedback</button>
         </div>
