--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechMon</title>
+    <title>Upload</title>
     <link rel="stylesheet" href="static/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -30,9 +30,8 @@
             <p><strong>Result akan ditampilkan di sini</strong></p>
         </div>
         
-
         <div class="footer">
-            <button>History</button>
+            <button><a href="/history">History</a></button>
             <button><a href="/">Home</a></button>
             <button>Feedback</button>
         </div>
