--- a/app/static/style.css
+++ b/app/static/style.css
@@ -14,10 +14,12 @@ html, body {
 /* Container Styling */
 .container {
     height: 100%;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+    max-width: 600px;
+    text-align: center;
 }
 
 /* Header Styling */
@@ -101,6 +103,7 @@ html, body {
     padding: 10px 0;
     background-color: #007bff;
     border-radius: 10px 10px 0 0;
+    margin-top: auto;
 }
 
 .footer a {
@@ -147,11 +150,7 @@ html, body {
 }
 
 /* Upload HTML */
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: center;
-}
+
 .square {
     width: 300px;
     height: 300px;
@@ -167,11 +166,6 @@ html, body {
     max-width: 100%;
     max-height: 100%;
 }
-/* .result-container {
-    margin-top: 20px;
-    color: black;
-} */
-
 .result-container {
     display: grid;
     grid-template-rows: auto auto auto auto;
@@ -235,4 +229,33 @@ html, body {
 
 .feedback.bad {
     color: red;
+}
+
+/* History HTML */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 10px;
+}
+table, th, td {
+    border: 1px solid black;
+}
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+
+.prediction-title {
+    font-weight: bold;
+    text-align: center;
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.prediction-table {
+    margin-top: 0;
 }
