--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -113,7 +113,7 @@
                 })
                 .catch(error => {
                     console.error("Error:", error);
-                    resultContainer.innerHTML = "<p><strong>Error processing the image. Please try again.</strong></p>";
+                    resultContainer.innerHTML = "<p><strong>Error dalam memproses file gambar, pastikan formatnya benar (jpg/png/jpeg).</strong></p>";
                 });
         }
 
