feedback to us page

--- a/app/templates/feedbacktouser.html
+++ b/app/templates/feedbacktouser.html
@@ -54,7 +54,7 @@
         <div class="footer">
             <button><a href="/history">History</a></button>
             <button><a href="/">Home</a></button>
-            <button>Feedback</button>
+            <button><a href="/feedbacktous">Feedback</a></button>
         </div>
     </div>
     <script>
