--- a/app/static/style.css
+++ b/app/static/style.css
@@ -370,3 +370,64 @@ th {
 .note h4 {
     font-weight: bold;
 }
+
+/*Feedback to Us Page*/
+.opini {
+    font-weight: 675;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+/* Emojis */
+.emojis {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 15px 0;
+}
+
+.why {
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.emoji {
+    font-size: 2rem;
+    cursor: pointer;
+    transition: transform 0.2s, color 0.2s;
+}
+
+.emoji.active {
+    transform: scale(1.3);
+    color: #007bff;
+}
+
+/*Textarea*/
+.textarea-feedback {
+    display: block;
+    width: 80%;
+    margin: 15px auto;
+}
+.textarea-feedback textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+}
+button#send-feedback {
+    display: inline-block;
+    text-align: center;
+    width: auto;
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #fff;
+    transition: #fff 0.3s ease;
+}
+button#send-feedback:hover {
+    background-color: #ccc;
+}
