--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -46,7 +46,7 @@
         <div class="footer">
             <button><a href="/history">History</a></button>
             <button><a href="/">Home</a></button>
-            <button>Feedback</button>
+            <button><a href="/feedbacktous">Feedback</a></button>
         </div>
     </div>
 
